Fix missing rounded corners on MacViews app windows.

Two changes:

- Make all Views windows layer backed (they mostly were already).

- Use _titlebarHeight to hide the titlebar for app windows. _hidingTitlebar
  resulted in the top corners not being clipped (as if the window were a
  sheet).

Bug: 863264, 862672
Change-Id: I9647afdcba464cc17b88cc2d752bf273a0f6ab89
Reviewed-on: https://chromium-review.googlesource.com/1136520
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575047}
Former-commit-id: f9f97f021be825e8470317d60b7e664fa391932d