chrome/browser/ui/views/frame/native_widget_mac_frameless_nswindow.mm
@@ -13,8 +13,8 @@
 @end
 
 @implementation NativeWidgetMacFramelessNSWindowFrame
-- (BOOL)_hidingTitlebar {
-  return YES;
+- (CGFloat)_titlebarHeight {
+  return 0;
 }
 @end
 
